Cluster/NylFrontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nyl-frontend
  labels:
    app: nyl-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nyl-frontend
  template:
    metadata:
      labels:
        app: nyl-frontend
    spec:
      containers:
        - name: nyl-frontend
          image: localhost:32000/nyl-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
