Cluster/NylFrontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nyl-frontend
spec:
  type: ClusterIP
  selector:
    app: nyl-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
